src/css/index.styl
.color--
  &primary
    color: #f90
  &secondary
    color: #dc7000
  &white
    color: #fff
  &black
    color: #333
  &gray
    color: #aaa

.border--
  &primary
    border-color: #f90
  &secondary
    border-color: #dc7000
  &white
    border-color: #fff
  &black
    border-color: #333
  &gray
    border-color: #aaa

.background--
  &primary
    background-color: #f90
  &secondary
    background-color: #dc7000
  &white
    background-color: #fff
  &black
    background-color: #333
  &gray
    background-color: #aaa

.float
  &--right
    float: right
  &--left
    float: left

.align
  &--right
    text-align: right
  &--left
    text-align: left

*
  box-sizing: border-box

body
  padding: 10vh 2vw

header,
footer
  position: fixed
  right: 0
  left: 0
  height: 10vh
  padding: 0 2vw
  line-height: 10vh
  z-index: 10

header
  top: 0
  border-bottom: 1px solid

  h1
    margin: 0
    font-size: 5vh
    line-height: 10vh
    font-weight: normal

footer
  bottom: 0
  border-top: 1px solid

  .footer-link
    font-size: 5vh
    line-height: 10vh
    margin-right: 2vw
    text-decoration: none
    
    &:last-child
      margin-right: 0

section
  height: 80vh
  overflow: auto
  display: flex
  align-items: center
  justify-content: center
  flex-wrap: wrap

.quote
  display: flex
  align-items: flex-end

  img + p,
  p + img
    margin-left: 3em

  img
    width: 90px
    border-radius: 45px
    border: 1px solid

  &__content
    flex: 1
    position: relative
    
    &:before,
    &:after
      font-size: 3em
      position: absolute
      color: #333
      font-family: serif

    &:before
      content: '\201C'
      top: -0.5em
      left: -0.5em
    &:after
      content: '\201D'
      bottom: -0.5em
      right: -0.5em
      line-height: 0.5em

#about
  & > img
    width: 360px
    max-width: 100%
    border: 1px solid

  & > article
    width: 100%

    @media (min-width: 829px)
      width: 435px
      padding-left: 30px

#testimonials
  figure
    margin: 1vh 10vw
  
  figcaption
    font-style: italic
    
    &.align--right
      margin-right: 43px

      &:after
        content: '\2B0F'
        font-size: 2em

    &:not(.align--right)
      margin-left: 36px

      &:before
        content: '\2B11'
        font-size: 2em

